# projARL_TUM2016

./: README.md
turtlebot_soccer/: .SI.py.swp  CMakeLists.txt  SI.py  SI.py~  offline.py  offline2D_tiling.py  offline_tiling.py  package.xml
turtlebot_soccer/ball_detection/: CMakeLists.txt  CMakeLists.txt~~  package.xml  package.xml~~
turtlebot_soccer/ball_detection/launch/: ball_detection.launch
turtlebot_soccer/ball_detection/src/: ball_detection(CV_method).cpp~  ball_detection.cpp  ball_detection.cpp~  ball_detection.cpp~~
turtlebot_soccer/launch/: turtlebot_world.launch
turtlebot_soccer/worlds/: backup.world  soccer.world
